# insurence_mlops

./: README.md  insurance_tmp.ipynb  insurence.ipynb  pyproject.toml
